# tushare-a-fundamentals

./: .env.example  .envrc.example  .gitignore  AGENTS.md  README.md  config.example.yaml  config.example.yml  config.yml  pyproject.toml  requirements.txt  test_api_credits.py
configs/: datasets.example.yaml  datasets.yaml
docs/: cash_flow_statement_tushare_api_doc.md  revenue_breakdown_tushare_api_doc.md
project_tools/: combine_code.py
src/: app.py
src/tushare_a_fundamentals/: app.py  cli.py  common.py  dataset_specs.py  downloader.py  progress.py  state_backend.py  storage.py
src/tushare_a_fundamentals/commands/: coverage.py  download.py  export.py  state.py
src/tushare_a_fundamentals/meta/: __init__.py  doc_fields.py  state_store.py
src/tushare_a_fundamentals/transforms/: __init__.py  deduplicate.py
src/tushare_a_fundamentals/workflows/: download.py
src/tushare_a_fundamentals/writers/: __init__.py  dataset_writer.py
tests/: test_cli_overrides.py  test_dedup.py  test_diff_single.py  test_errors.py  test_periods.py  test_save_naming.py  test_ttm.py
tests/integration/: test_cli_ingest_build.py  test_cli_overrides.py  test_errors.py
tests/unit/: test_build_datasets.py  test_common_utils.py  test_concat_non_empty.py  test_convert_parquet_to_csv.py  test_coverage.py  test_credits.py  test_dataset_fields.py  test_dataset_writer.py  test_dedup.py  test_diff_single.py  test_download_cmd.py  test_download_multi_export.py  test_export_cmd.py  test_export_command.py  test_fetch_income_bulk.py  test_last_publishable_period.py  test_load_yaml.py  test_market_downloader.py  test_parquet_dependency.py  test_periods.py  test_periods_from_range.py  test_plan.py  test_pro_pool.py  test_progress.py  test_rate_limiter.py  test_report_types.py  test_retry_policy.py  test_save_naming.py  test_state_cmd.py  test_state_store.py  test_ttm.py  test_write_parquet_dataset.py
tools/: check_api_availability.py  combine_code.py  convert_parquet_to_csv.py  migrate_ts_code_column.py  update_dataset_fields.py
