[project]
name = "tushare-a-fundamentals"
version = "0.2.0"
description = "A-share income statement downloader using TuShare"
readme = "README.md"
authors = [{ name = "Richard" }]
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "tushare>=1.2.89",
    "pandas>=1.5.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
income-downloader = "tushare_a_fundamentals.app:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["tushare_a_fundamentals"]

[tool.uv]
python-preference = "only-managed"
required-version = ">=0.8.0"
package = true
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0", 
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "C90"]

[tool.ruff.mccabe]
max-complexity = 10
